Foi criado uma entidade para que o usuário tenha uma conta para guardar valores